--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hacker News</title>
+  <script>
+    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      if (!("theme" in localStorage)) {
+        localStorage.setItem("theme", "dark");
+      }
+    }
+  </script>
 </head>
 
 <body>
